--- a/style.css
+++ b/style.css
@@ -1,162 +1,46 @@
-body{
-    margin: 0;
-    padding: 0;
-    background: url(back.jpg)no-repeat center center fixed;
-    background-size: cover;
-    background-size: cover;
-    background-size: cover;
-    font-family: sans-serif;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
 }
 
-.box{
-
-    
-
-    background: #f5f5f5;
-    color: red;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    padding: 70px 30px;
+.container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-
-
-.user{
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
-}
-
-h1{
-    margin: 0;
-    padding: 0 0 20px;
+h2 {
     text-align: center;
-    font-size: 22px;
-    color: black;
 }
 
-p{
-    color: #f49126;
-    margin: 0;
-    padding: 0;
+label {
+    display: block;
     font-weight: bold;
 }
 
-input{
+input[type="text"],
+input[type="password"] {
     width: 100%;
+    padding: 10px;
     margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
 }
 
- input[type="text"], input[type="password"] ,input[type="email"]
-{
-    border: none;
-    border-bottom: 1px solid #fff;
-    background: transparent;
-    outline: none;
-    height: 40px;
-    color: #673ab7;
-    font-size: 16px;
-}
-
-input[type="submit"]
-{
-    border: none;
-    outline: none;
-    height: 40px;
-    background: #2196f3;
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
     color: #fff;
-    font-size: 18px;
-    border-radius: 20px;
-
-}
-
-
-input[type="submit"]:hover
-{
+    border: none;
+    border-radius: 3px;
     cursor: pointer;
-    background: #0097a7;
 }
 
-a
-{
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 20px;
-    color: #069818;
+input[type="submit"]:hover {
+    background-color: #0056b3;
 }
-
-
-a:hover
-{
-    color: red;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
